add device config scripts

--- a/04b_Deploy_ML_model_on_IOT_Edge.ipynb
+++ b/04b_Deploy_ML_model_on_IOT_Edge.ipynb
@@ -397,7 +397,15 @@
    "source": [
     "# double check if the IP address of the docker0 interface is 172.17.01 by using ifconfig command\n",
     "management_uri = 'http://172.17.01:15580'\n",
-    "workload_uri = 'http://172.17.01:15581'\n",
+    "workload_uri = 'http://172.17.01:15581'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!sudo sed -i \"s#\\(management_uri: \\).*#\\1\\\"$management_uri\\\"#g\" /etc/iotedge/config.yaml\n",
     "!sudo sed -i \"s#\\(workload_uri: \\).*#\\1\\\"$workload_uri\\\"#g\" /etc/iotedge/config.yaml"
    ]
@@ -444,6 +452,46 @@
    "metadata": {},
    "source": [
     "When you run `docker ps` command in the edge device, you should see `edgeAgent` container is up running."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (Alternative approach) Configure IoT Edge Device\n",
+    "\n",
+    "Use this approach if your edge device is a different server than the host server. Note that your edge device must satisfy following prequequisites:\n",
+    "\n",
+    "- Linux (Ubuntu)\n",
+    "- Docker installed\n",
+    "\n",
+    "Step 1: run appropriate cells above to get values for following variables.\n",
+    "\n",
+    "- release\n",
+    "- device_connection_string\n",
+    "- management_uri\n",
+    "- workload_uri\n",
+    "\n",
+    "Step 2: run next cell to generate *deviceconfig.sh* file. \n",
+    "\n",
+    "Step 3: run all the commands in *deviceconfig.sh* file on your edge device. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = open('deviceconfig_template.sh')\n",
+    "contents = file.read()\n",
+    "contents = contents.replace('__release', release)\n",
+    "contents = contents.replace('__device_connection_string', device_connection_string)\n",
+    "contents = contents.replace('__management_uri', management_uri)\n",
+    "contents = contents.replace('__workload_uri', workload_uri)\n",
+    "\n",
+    "with open('./deviceconfig.sh', 'wt', encoding='utf-8') as output_file:\n",
+    "    output_file.write(contents)"
    ]
   },
   {
@@ -520,9 +568,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can check the logs of the ML module with the below. Common issue and resolutions are shown below.\n",
+    "You can check the logs of the ML module with using the command in the next cell. **Note that if your edge device differs from the host server, you need to run this command on the edge device.** \n",
     "\n",
-    "(1) See error message \"Error: No such container: module_name\". The container is starting up. Please wait for a couple minutes and run this command again."
+    "Common issue and resolution are shown below.\n",
+    "\n",
+    "An error message \"Error: No such container: module_name\" is shown. Resolution - Please wait for a couple minutes and run this command again. The container is starting up. "
    ]
   },
   {
