comment out %%time magic

--- a/01_Data_Prep.ipynb
+++ b/01_Data_Prep.ipynb
@@ -501,7 +501,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
+    "# %%time\n",
     "# Use AnswerId to pair each training dupe with its matching question and also with N-1 questions not its match.\n",
     "balanced_pairs_train = random_merge(dupes_train, questions, N=match)"
    ]
@@ -567,7 +567,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
+    "# %%time\n",
     "# Use AnswerId to pair each testing dupe with all questions.\n",
     "balanced_pairs_test = random_merge(dupes_test, questions, N=questions.shape[0])"
    ]
