change to line magic  %time

--- a/01_Data_Prep.ipynb
+++ b/01_Data_Prep.ipynb
@@ -501,9 +501,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%time\n",
     "# Use AnswerId to pair each training dupe with its matching question and also with N-1 questions not its match.\n",
-    "balanced_pairs_train = random_merge(dupes_train, questions, N=match)"
+    "%time balanced_pairs_train = random_merge(dupes_train, questions, N=match)"
    ]
   },
   {
@@ -567,9 +566,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%time\n",
     "# Use AnswerId to pair each testing dupe with all questions.\n",
-    "balanced_pairs_test = random_merge(dupes_test, questions, N=questions.shape[0])"
+    "%time balanced_pairs_test = random_merge(dupes_test, questions, N=questions.shape[0])"
    ]
   },
   {
