--- a/04_Create_Image_Deploy_On_AKS.ipynb
+++ b/04_Create_Image_Deploy_On_AKS.ipynb
@@ -467,14 +467,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
     "aks_service = Webservice.deploy_from_image(\n",
     "    workspace=ws,\n",
     "    name=aks_service_name,\n",
     "    image=image,\n",
     "    deployment_config=aks_config,\n",
     "    deployment_target=aks_target,\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%time\n",
     "aks_service.wait_for_deployment(show_output=True)\n",
     "print(aks_service.state)"
    ]
