--- a/{{cookiecutter.project_name}}/00_AMLConfiguration.ipynb
+++ b/{{cookiecutter.project_name}}/00_AMLConfiguration.ipynb
@@ -209,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You are now ready to move on to the [data preperation](01_Data_Prep.ipynb) notebook."
+    "You are now ready to move on to the [data preperation](01_DataPrep.ipynb) notebook."
    ]
   }
  ],
