--- a/{{cookiecutter.project_name}}/aks/06_SpeedTestWebApp.ipynb
+++ b/{{cookiecutter.project_name}}/aks/06_SpeedTestWebApp.ipynb
@@ -293,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we will explore the real-time scoring in an [iPyWidget app](06_Real_Time_Scoring.ipynb)."
+    "Next, we will explore the real-time scoring in an [iPyWidget app](07_RealTimeScoring.ipynb)."
    ]
   }
  ],
