--- a/{{cookiecutter.project_name}}/aks/07_RealTimeScoring.ipynb
+++ b/{{cookiecutter.project_name}}/aks/07_RealTimeScoring.ipynb
@@ -691,7 +691,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To tear down the cluster and related resources go to the [last notebook](07_Tear_Down.ipynb)."
+    "To tear down the cluster and related resources go to the [last notebook](08_TearDown.ipynb)."
    ]
   }
  ],
