--- a/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
+++ b/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
@@ -34,12 +34,11 @@
    "source": [
     "## Prerequisites <a id=\"Prerequisite\"></a>\n",
     "\n",
-    "### 1. Satisfy the requirment specified in Sections `Prerequisites` and `Setup` in the repo's [README page](./README.md).\n",
+    "- Satisfy the requirment specified in Sections `Prerequisites` and `Setup` in the repo's [README page](./README.md).\n",
     "\n",
-    "\n",
-    "### 2. Build the trained ML Model into a docker image. \n",
+    "- Build the trained ML Model into a docker image. \n",
     "    \n",
-    "You have two options to satisfy this requirment. The first option is to use a prebuilt image. The second option is to complete all the notebooks from [00_AML_Configuration.ipynb](./00_AML_Configuration.ipynb) through [04_Create_Image_Deploy_On_AKS.ipynb](./04_Create_Image_Deploy_On_AKS.ipynb) (in [04 notebook](./04_Create_Image_Deploy_On_AKS.ipynb), complete through the section `Test image locally` only)."
+    "    - You have two options to satisfy this requirment. The first option is to complete all the notebooks from [00_AML_Configuration.ipynb](./00_AMLConfiguration.ipynb) through [04_CreateImage.ipynb](./04_CreateImage.ipynb). In this tutorial, we show the steps when using this option. The second option is to use a prebuilt docker image created by the user. Instructions need to be adjusted to proceed with this option."
    ]
   },
   {
@@ -48,16 +47,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
     "import pandas as pd\n",
-    "from utilities import text_to_json, get_auth\n",
     "import requests\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "import json\n",
+    "import docker\n",
+    "import time\n",
+    "\n",
     "from azureml.core import Workspace\n",
     "from azureml.core.image import Image\n",
     "from azureml.core.workspace import Workspace\n",
     "from azureml.core.conda_dependencies import CondaDependencies\n",
-    "from dotenv import set_key, get_key, find_dotenv"
+    "from azure.mgmt.containerregistry import ContainerRegistryManagementClient\n",
+    "from azure.mgmt import containerregistry\n",
+    "from dotenv import set_key, get_key, find_dotenv\n",
+    "\n",
+    "from utilities import text_to_json, get_auth"
    ]
   },
   {
@@ -93,7 +100,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ws = Workspace.from_config()\n",
     "ws = Workspace.from_config(auth=get_auth(env_path))\n",
     "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
    ]
@@ -108,9 +114,9 @@
    },
    "outputs": [],
    "source": [
-    "iot_hub_name = \"<YOUR_IOT_HUB_NAME>\" # iot hub name\n",
-    "device_id = \"<YOUR_EDGE_DEVICE_NAME>\" # the name you give to the edge device\n",
-    "module_name = \"<YOUR_ML_MODULE_NAME>\"   # the ML module name"
+    "iot_hub_name = \"<YOUR_IOT_HUB_NAME>\" # a UNIQUE name is required, e.g. \"fstlstnameiothub\". Avoid too simple name such as \"myiothub\".\n",
+    "device_id = \"<YOUR_EDGE_DEVICE_NAME>\" # the name you give to the edge device. e.g. device_id = 'mydevice'\n",
+    "module_name = \"<YOUR_MODULE_NAME>\"   # the module name. e.g. module_name = 'mymodule'"
    ]
   },
   {
@@ -130,6 +136,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "iot_hub_name = get_key(env_path, 'iot_hub_name')\n",
+    "device_id = get_key(env_path, 'device_id')\n",
+    "module_name = get_key(env_path, 'module_name')\n",
     "resource_group = get_key(env_path, 'resource_group')\n",
     "image_name = get_key(env_path, 'image_name')"
    ]
@@ -139,6 +148,19 @@
    "metadata": {},
    "source": [
     "### Install az-cli iot extension "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accounts = !az account list --all -o tsv\n",
+    "if \"Please run \\\"az login\\\" to access your accounts.\" in accounts[0]:\n",
+    "    !az login -o table\n",
+    "else:\n",
+    "    print(\"Already logged in\")"
    ]
   },
   {
@@ -157,7 +179,22 @@
    "source": [
     "### Create IoT Hub\n",
     "\n",
-    "The following code creates a free F1 hub with name `iot_hub_name` in the resource group `resource_group`."
+    "The following code creates a free F1 hub with name `iot_hub_name` in the resource group `resource_group`.\n",
+    "\n",
+    "Common issue and resolution are shown below.\n",
+    "\n",
+    "(1) See error message \"Resource group `<resource_group>` could not be found\". You may forget to set which Azure subscription to use. Run command `az account set --subscription <subscription_id>` to set your subscription.\n",
+    "\n",
+    "(2) See error message \"Max number of Iot Hubs exceeded for sku = Free, Max Allowed = 1, Current = 2 in the subscription Id: `<subscription_id>`.\" This error message indicates that the quota is reached for creating the specific type of IoT Hub resource in Azure."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!az iot hub list --resource-group $resource_group -o table"
    ]
   },
   {
@@ -184,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!az iot hub device-identity create --hub-name $iot_hub_name --device-id $device_id --edge-enabled"
+    "!az iot hub device-identity create --hub-name $iot_hub_name --device-id $device_id --edge-enabled -g $resource_group"
    ]
   },
   {
@@ -200,8 +237,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "json_data = !az iot hub device-identity show-connection-string --device-id $device_id --hub-name $iot_hub_name\n",
-    "device_connection_string = json.loads(''.join([i for i in json_data if 'WARNING' not in i]))['cs']\n",
+    "json_data = !az iot hub device-identity show-connection-string --device-id $device_id --hub-name $iot_hub_name -g $resource_group\n",
+    "device_connection_string = json.loads(''.join([i for i in json_data if 'WARNING' not in i]))['connectionString']\n",
     "device_connection_string"
    ]
   },
@@ -211,9 +248,7 @@
    "source": [
     "## Step 2 Provision and Configure IoT Edge Device  <a id=\"step2\"></a>\n",
     "\n",
-    "In this tutorial, we use a Ubuntu Linux VM as the edge device. We use the same Linux VM where you run [the current notebook](./04b_Deploy_ML_model_on_IOT_Edge.ipynb). The goal is to configure the VM so that it can run IoT Edge runtime and Docker. If use other device as the edge device, please adjust instructions accordingly. \n",
-    "\n",
-    "For more information, please check document [Install the Azure IoT Edge runtime on Linux (x64)](https://docs.microsoft.com/en-us/azure/iot-edge/how-to-install-iot-edge-linux) to install iot edge runtime on the edge device.   "
+    "In this tutorial, we use a NC6 Ubuntu Linux VM as the edge device, which is the same Linux VM where you run the current notebook. The goal is to configure the edge device so that it can run [Docker](https://docs.docker.com/v17.12/install/linux/docker-ee/ubuntu), [nvidia-docker](https://github.com/NVIDIA/nvidia-docker), and [IoT Edge runtime](https://docs.microsoft.com/en-us/azure/iot-edge/how-to-install-iot-edge-linux). If another device is used as the edge device, instructions need to be adjusted accordingly. "
    ]
   },
   {
@@ -279,45 +314,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Install the container runtime\n",
-    "\n",
-    "This section can be ignored if `docker` is already installed on your device. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Perform apt update.\n",
-    "!sudo apt-get update"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Install the Moby engine.\n",
-    "!sudo apt-get install moby-engine"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Install the Moby command-line interface (CLI). The CLI is useful for development but optional for production deployments.\n",
-    "!sudo apt-get install moby-cli"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Install the Azure IoT Edge Security Daemon\n",
     "\n",
     "The IoT Edge security daemon provides and maintains security standards on the IoT Edge device. The daemon starts on every boot and bootstraps the device by starting the rest of the IoT Edge runtime.\n",
@@ -371,7 +367,8 @@
    "outputs": [],
    "source": [
     "# restart the daemon\n",
-    "!sudo systemctl restart iotedge"
+    "!sudo systemctl restart iotedge\n",
+    "time.sleep(5) # Wait 5 seconds for iotedge to restart"
    ]
   },
   {
@@ -417,7 +414,8 @@
    "outputs": [],
    "source": [
     "# restart the daemon\n",
-    "!sudo systemctl restart iotedge"
+    "!sudo systemctl restart iotedge\n",
+    "time.sleep(5) # Wait 5 seconds for iotedge to restsrt"
    ]
   },
   {
@@ -455,26 +453,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker ps"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (Alternative approach) Configure IoT Edge Device\n",
+    "### (Optional) Alternative Approach to Configure IoT Edge Device\n",
     "\n",
     "Use this approach if your edge device is a different server than the host server. Note that your edge device must satisfy following prequequisites:\n",
     "\n",
-    "- Linux (Ubuntu)\n",
+    "- Linux (x64)\n",
     "- Docker installed\n",
     "\n",
-    "Step 1: run appropriate cells above to get values for following variables.\n",
+    "Step 1: run appropriate cells above to get the value for following variable.\n",
+    "\n",
+    "- device_connection_string\n",
+    "\n",
+    "\n",
+    "Step 2: run approprate commands on the edge device to get values for following variables.\n",
     "\n",
     "- release\n",
-    "- device_connection_string\n",
     "- management_uri\n",
     "- workload_uri\n",
     "\n",
-    "Step 2: run next cell to generate *deviceconfig.sh* file. \n",
+    "Step 3: run next cell to generate *deviceconfig.sh* file. \n",
     "\n",
-    "Step 3: run all the commands in *deviceconfig.sh* file on your edge device. "
+    "Step 4: run all the commands in *deviceconfig.sh* file on your edge device. \n"
    ]
   },
   {
@@ -509,6 +520,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "docker_client = docker.APIClient(base_url='unix://var/run/docker.sock')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# get the image from workspace in case the 'image' object is not in the memory\n",
     "image_name = get_key(env_path, 'image_name')\n",
     "image = ws.images[image_name]"
@@ -525,8 +545,7 @@
     "reg_name=container_reg.split(\"/\")[-1]\n",
     "container_url = \"\\\"\" + image.image_location + \"\\\",\"\n",
     "subscription_id = ws.subscription_id\n",
-    "from azure.mgmt.containerregistry import ContainerRegistryManagementClient\n",
-    "from azure.mgmt import containerregistry\n",
+    "\n",
     "client = ContainerRegistryManagementClient(ws._auth,subscription_id)\n",
     "result= client.registries.list_credentials(resource_group, reg_name, custom_headers=None, raw=False)\n",
     "username = result.username\n",
@@ -561,7 +580,10 @@
    "outputs": [],
    "source": [
     "# Push the deployment JSON to the IOT Hub\n",
-    "!az iot edge set-modules --device-id $device_id --hub-name $iot_hub_name --content deployment.json"
+    "!az iot edge set-modules --device-id $device_id \\\n",
+    "                         --hub-name $iot_hub_name \\\n",
+    "                         --content deployment.json \\\n",
+    "                         -g $resource_group"
    ]
   },
   {
@@ -582,6 +604,62 @@
    "outputs": [],
    "source": [
     "!docker logs -f $module_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_id(container_name):\n",
+    "    contents = docker_client.containers()\n",
+    "    for cont in contents:\n",
+    "        if container_name in cont['Names'][0]:\n",
+    "            return cont[\"Id\"]\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d_id = get_id(module_name)\n",
+    "while d_id is None:\n",
+    "    d_id = get_id(module_name)\n",
+    "    time.sleep(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logs = docker_client.attach(d_id, stream=True, logs=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# keep running this cell until the log contains \"Using TensorFlow backend\", which indicates the container is up running.\n",
+    "for l in logs:\n",
+    "    msg = l.decode('utf-8')\n",
+    "    print(msg)\n",
+    "    if \"Using TensorFlow backend\" in msg:\n",
+    "        break   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When you run `docker ps` command in the edge device, you should see there are three containers running: `edgeAgent`, `edgeHub`, and the container with name `module_name`."
    ]
   },
   {
@@ -765,23 +843,6 @@
    "outputs": [],
    "source": [
     "print(\"Average time taken: {0:4.2f} ms\".format(10 ** 3 * np.mean(timer_results)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Clean up resource <a id=\"cleanup\"></a>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Delete IoT hub\n",
-    "#!az iot hub delete --name $iot_hub_name --resource-group $resource_group"
    ]
   }
  ],
