--- a/{{cookiecutter.project_name}}/01_DataPrep.ipynb
+++ b/{{cookiecutter.project_name}}/01_DataPrep.ipynb
@@ -681,7 +681,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now move on to [train on local](02_Train_On_Local.ipynb) notebook to train our model using Azure Machine Learning."
+    "We can now move on to [train on local](02_TrainOnLocal.ipynb) notebook to train our model using Azure Machine Learning."
    ]
   }
  ],
