--- a/{{cookiecutter.project_name}}/04_CreateImage.ipynb
+++ b/{{cookiecutter.project_name}}/04_CreateImage.ipynb
@@ -61,23 +61,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "parameters"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "image_name = \"YOUR_IMAGE_NAME\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "set_key(env_path, \"image_name\", image_name)"
+    "image_name = get_key(env_path, 'image_name')"
    ]
   },
   {
@@ -330,6 +317,7 @@
     "name": "raymondl"
    }
   ],
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python [conda env:MLAKSDeployAML]",
    "language": "python",
