--- a/{{cookiecutter.project_name}}/00_AMLConfiguration.ipynb
+++ b/{{cookiecutter.project_name}}/00_AMLConfiguration.ipynb
@@ -98,10 +98,15 @@
    },
    "outputs": [],
    "source": [
-    "subscription_id = \"YOUR_SUBSCRIPTION_ID\"\n",
-    "resource_group = \"YOUR_RESOURCE_GROUP\"\n",
-    "workspace_name = \"YOUR_WORKSPACE_NAME\"\n",
-    "workspace_region = \"YOUR_WORKSPACE_REGION\"\n",
+    "# Azure resources\n",
+    "subscription_id = \"{{cookiecutter.subscription_id}}\"\n",
+    "resource_group = \"{{cookiecutter.resource_group}}\"  \n",
+    "workspace_name = \"{{cookiecutter.workspace_name}}\"  \n",
+    "workspace_region = \"{{cookiecutter.workspace_region}}\"\n",
+    "image_name = (\n",
+    "    \"{{cookiecutter.image_name}}\"\n",
+    ")  # e.g. image_name = \"{{cookiecutter.image_name}} (avoid underscore in names)\"\n",
+    "\n",
     "tenant_id = \"YOUR_TENANT_ID\" # Optional for service principal authentication\n",
     "username = \"YOUR_SERVICE_PRINCIPAL_APPLICATION_ID\" # Optional for service principal authentication\n",
     "password = \"YOUR_SERVICE_PRINCIPAL_PASSWORD\" # Optional for service principal authentication"
@@ -136,6 +141,8 @@
     "set_key(env_path, \"resource_group\", resource_group)\n",
     "set_key(env_path, \"workspace_name\", workspace_name)\n",
     "set_key(env_path, \"workspace_region\", workspace_region)\n",
+    "set_key(env_path, \"image_name\", image_name)\n",
+    "\n",
     "set_key(env_path, \"tenant_id\", tenant_id)\n",
     "set_key(env_path, \"username\", username)\n",
     "set_key(env_path, \"password\", password)"
@@ -214,6 +221,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python [conda env:MLAKSDeployAML]",
    "language": "python",
