--- a/{{cookiecutter.project_name}}/02_TrainOnLocal.ipynb
+++ b/{{cookiecutter.project_name}}/02_TrainOnLocal.ipynb
@@ -51,6 +51,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Initialize Model Hyperparameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook uses a training script that uses [lightgbm](https://lightgbm.readthedocs.io/en/latest/Python-API.html#scikit-learn-api) . Here we set the number of estimators. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "num_estimators = \"10\"\n",
+    "set_key(env_path, \"num_estimators\", num_estimators)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Initialize Workspace\n",
     "\n",
     "Initialize a workspace object from persisted configuration file."
@@ -191,7 +219,7 @@
     "    \"--outputs\",\n",
     "    \"outputs\",\n",
     "    \"--estimators\",\n",
-    "    \"4000\",\n",
+    "    get_key(env_path, 'num_estimators'),\n",
     "    \"--match\",\n",
     "    \"5\",\n",
     "]"
@@ -209,7 +237,7 @@
     "    arguments=args,\n",
     "    run_config=run_config_user_managed,\n",
     ")\n",
-    "run = exp.submit(src)"
+    "#run = exp.submit(src)"
    ]
   },
   {
@@ -225,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run"
+    "#run"
    ]
   },
   {
@@ -241,8 +269,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "run.wait_for_completion(show_output=True)"
+    "#%%time\n",
+    "#run.wait_for_completion(show_output=True)"
    ]
   },
   {
@@ -258,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run.get_file_names()"
+    "#run.get_file_names()"
    ]
   },
   {
@@ -274,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run.get_metrics()"
+    "#run.get_metrics()"
    ]
   },
   {
@@ -462,7 +490,7 @@
     "    \"--outputs\",\n",
     "    \"outputs\",\n",
     "    \"--estimators\",\n",
-    "    \"4000\",\n",
+    "    get_key(env_path, 'num_estimators'),\n",
     "    \"--match\",\n",
     "    \"5\",\n",
     "]"
@@ -588,7 +616,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we [develop the scoring script](03_Develop_Scoring_Script.ipynb) for this model."
+    "Next, we [develop the scoring script](03_DevelopScoringScript.ipynb) for this model."
    ]
   }
  ],
