get image from ws

--- a/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
+++ b/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
@@ -114,6 +114,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = ws.images[image_name]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
