--- a/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
+++ b/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
@@ -272,7 +272,16 @@
     "    image=image,\n",
     "    deployment_config=aks_config,\n",
     "    deployment_target=aks_target,\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%time\n",
     "aks_service.wait_for_deployment(show_output=True)\n",
     "print(aks_service.state)"
    ]
@@ -299,6 +308,27 @@
    "source": [
     "## Test the web service\n",
     "We now test the web sevice."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dupes_test_path = './data_folder/dupes_test.tsv'\n",
+    "dupes_test = pd.read_csv(dupes_test_path, sep='\\t', encoding='latin1')\n",
+    "text_to_score = dupes_test.iloc[0,4]\n",
+    "text_to_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jsontext = text_to_json(text_to_score)"
    ]
   },
   {
