fix module log msg

--- a/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
+++ b/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
@@ -650,7 +650,7 @@
     "for l in logs:\n",
     "    msg = l.decode('utf-8')\n",
     "    print(msg)\n",
-    "    if \"Using TensorFlow backend\" in msg:\n",
+    "    if \"Opened module client connection\" in msg:\n",
     "        break   "
    ]
   },
