fix double pencentage

--- a/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
+++ b/{{cookiecutter.project_name}}/aks/05_DeployOnAKS.ipynb
@@ -281,7 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%time\n",
+    "%%time\n",
     "aks_service.wait_for_deployment(show_output=True)\n",
     "print(aks_service.state)"
    ]
