fix minor issue

--- a/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
+++ b/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
@@ -493,7 +493,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = open('deviceconfig_template.sh')\n",
+    "file = open('./deviceconfig_template.sh')\n",
     "contents = file.read()\n",
     "contents = contents.replace('__release', release)\n",
     "contents = contents.replace('__device_connection_string', device_connection_string)\n",
@@ -714,18 +714,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'http://localhost:5001/score'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#scoring_url = aks_service.scoring_uri\n",
-    "scoring_url = url\n",
-    "#api_key = aks_service.get_keys()[0]"
+    "scoring_url = 'http://localhost:5001/score'"
    ]
   },
   {
