fix uri in config file

--- a/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
+++ b/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
@@ -202,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!az iot hub create --resource-group $resource_group --name $iot_hub_name --sku F1 "
+    "!az iot hub create --resource-group $resource_group --name $iot_hub_name --sku S1 "
    ]
   },
   {
@@ -391,9 +391,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# double check if the IP address of the docker0 interface is 172.17.01 by using ifconfig command\n",
-    "management_uri = 'http://172.17.01:15580'\n",
-    "workload_uri = 'http://172.17.01:15581'"
+    "# double check if the IP address of the docker0 interface is 172.17.0.1 by using ifconfig command\n",
+    "management_uri = 'http://172.17.0.1:15580'\n",
+    "workload_uri = 'http://172.17.0.1:15581'"
    ]
   },
   {
