dynamically set ip of docker0

--- a/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
+++ b/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
@@ -387,13 +387,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "172.17.0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "output_data = !ifconfig\n",
+    "ip_docker0 = output_data[1].split(\":\")[1].split()[0]\n",
+    "print(ip_docker0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# double check if the IP address of the docker0 interface is 172.17.0.1 by using ifconfig command\n",
-    "management_uri = 'http://172.17.0.1:15580'\n",
-    "workload_uri = 'http://172.17.0.1:15581'"
+    "management_uri = 'http://{}:15580'.format(ip_docker0)\n",
+    "workload_uri = 'http://{}:15581'.format(ip_docker0)"
    ]
   },
   {
