print json_data

--- a/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
+++ b/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
@@ -237,8 +237,17 @@
    "outputs": [],
    "source": [
     "json_data = !az iot hub device-identity show-connection-string --device-id $device_id --hub-name $iot_hub_name -g $resource_group\n",
+    "print(json_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "device_connection_string = json.loads(''.join([i for i in json_data if 'WARNING' not in i]))['connectionString']\n",
-    "device_connection_string"
+    "print(device_connection_string)"
    ]
   },
   {
