use F1 tier IoT hub

--- a/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
+++ b/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
@@ -202,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!az iot hub create --resource-group $resource_group --name $iot_hub_name --sku S1 "
+    "!az iot hub create --resource-group $resource_group --name $iot_hub_name --sku F1 "
    ]
   },
   {
