fix dependency job for iotedge.service failure issue

--- a/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
+++ b/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
@@ -376,7 +376,17 @@
    "source": [
     "# restart the daemon\n",
     "!sudo systemctl restart iotedge\n",
-    "time.sleep(5) # Wait 5 seconds for iotedge to restart"
+    "time.sleep(10) # Wait 10 seconds for iotedge to restart"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# restart the daemon again\n",
+    "!sudo systemctl restart iotedge"
    ]
   },
   {
@@ -441,7 +451,7 @@
    "source": [
     "# restart the daemon\n",
     "!sudo systemctl restart iotedge\n",
-    "time.sleep(5) # Wait 5 seconds for iotedge to restsrt"
+    "time.sleep(10) # Wait 10 seconds for iotedge to restsrt"
    ]
   },
   {
