Fixes build and removes unused imports

--- a/{{cookiecutter.project_name}}/aks/08_TearDown.ipynb
+++ b/{{cookiecutter.project_name}}/aks/08_TearDown.ipynb
@@ -23,13 +23,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from azureml.core.workspace import Workspace\n",
-    "from azureml.core.webservice import AksWebservice\n",
+    "from azureml.core.compute import AksCompute\n",
     "from azureml.core.image import Image\n",
     "from azureml.core.model import Model\n",
-    "from azureml.core.compute import AksCompute\n",
+    "from azureml.core.webservice import AksWebservice\n",
+    "from azureml.core.workspace import Workspace\n",
     "from dotenv import get_key, find_dotenv\n",
-    "from utilities import get_auth"
+    "from utilities import get_auth\n"
    ]
   },
   {
