Removing sudo from iot edge command

--- a/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
+++ b/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
@@ -169,7 +169,7 @@
    "outputs": [],
    "source": [
     "# install az-cli iot extension \n",
-    "!sudo -i az extension add --name azure-cli-iot-ext"
+    "!az extension add --name azure-cli-iot-ext"
    ]
   },
   {
