--- a/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
+++ b/{{cookiecutter.project_name}}/iotedge/05_DeployOnIOTedge.ipynb
@@ -183,6 +183,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!which az\n",
+    "!az extension add --name azure-cli-iot-ext\n",
+    "!az --help\n",
+    "!az iot hub --help\n",
     "!az iot hub list --resource-group $resource_group -o table"
    ]
   },
